--- a/web/Estilo.css
+++ b/web/Estilo.css
@@ -1,10 +1,12 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 27-09-2019, 21:49:48
-    Author     : Cristobal
-*/
+* {
+    padding:0;
+    margin:0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+}
 
+.contenedor {
+    width: 95%;
+    
+}
